kubernetes/deployment_all.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: medicine-warriors-backend
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: medicine-warriors-backend-pods
    template:
      metadata:
        labels:
          app: medicine-warriors-backend-pods
      spec:
        securityContext:
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
        automountServiceAccountToken: false
        containers:
        - name: ctr-backend
          image: medicinewarriors/medicine-warriors-backend:3028f8f217efe570dc5213251a6c51d8629705c6
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 5000
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            procMount: "Default"
          resources:
            requests:
              memory: "100Mi"
              cpu: "30m"
            limits:
              memory: "300Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: medicine-warriors-backend
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: medicine-warriors-backend-pods
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medicine-warriors-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: medicine-warriors-frontend
  template:
    metadata:
      labels:
        name: medicine-warriors-frontend
    spec:
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 5000
      #   runAsGroup: 5000
      #   fsGroup: 5000
      containers:
      - name: frontend
        image: medicinewarriors/medicine-warriors-frontend:3028f8f217efe570dc5213251a6c51d8629705c6
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /index.html
            port: http
          initialDelaySeconds: 5
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /index.html
            port: http
          failureThreshold: 1
          periodSeconds: 10
        volumeMounts:
        - mountPath: /etc/nginx/conf.d # mount nginx-conf volume to /etc/nginx/conf.d
          readOnly: true
          name: medicine-warriors-frontend-nginx-conf
        securityContext: 
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
          procMount: "Default"
      volumes:
      - name: medicine-warriors-frontend-nginx-conf
        configMap:
          name: medicine-warriors-frontend-nginx-conf # place ConfigMap `nginx-conf` on /etc/nginx/conf.d/default.conf file
          items:
            - key: nginx.conf
              path: default.conf
---
apiVersion: v1
kind: Service
metadata:
  name: medicine-warriors-frontend
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: medicine-warriors-frontend-pods
