kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medicine-warriors
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: medicine-warriors-pods
