kubernetes/ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/proxy-read-timeout: '10800000'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '10800000'
  labels:
    app: medicine-warriors
    app.kubernetes.io/instance: medicine-warriors
    env: prod
  name: medicine-warriors
  namespace: default
spec:
  rules:
    - host: medicinewarriors.org
      http:
        paths:
          - backend:
              serviceName: medicine-warriors
              servicePort: 80
            path: /()(.*)
            pathType: Prefix
  # tls:
  #   - hosts:
  #       - medicinewarriors.org
  #     secretName: medicinewarriors.org-tls-certificates
